--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 		<!-- jquery -->
 		<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
 		
+		<!-- jquery templates -->
+		<script type="text/javascript" src="js/jquery.tmpl.min.js"></script>
+		
+		<!-- geolocation -->
+		<script type="text/javascript" src="js/geo.js"></script>
+		
 		<!-- jquery mobile -->
 		<script src="js/jquery.mobile-1.0b3.min.js"></script>
 		
@@ -28,7 +34,7 @@
 			</div>
 		
 			<div data-role="content">
-				<a href="#" data-role="button" id="loadProfile">Press me!</a> 
+				<a href="#" data-role="button" id="loadData">Press me!</a> 
 			</div>
 		</div>
 	</body>
