--- a/pages/results.html
+++ b/pages/results.html
@@ -4,7 +4,9 @@
 	</div>
 
 	<div data-role="content">
+	    <a href="index.html" data-role="button" data-icon="arrow-l" >Search Again</a>
 		<ul data-role="listview" data-theme="g" id="resList">
 		</ul>
+
 	</div>
 </div>
