--- a/pages/results.html
+++ b/pages/results.html
@@ -5,7 +5,7 @@
 
 	<div data-role="content">
 	    <a href="index.html" data-role="button" data-icon="arrow-l" >Search Again</a>
-		<ul data-role="listview" data-theme="g" id="resList">
+		<ul data-role="listview" data-inset="true" data-theme="g" id="resList">
 		</ul>
 
 	</div>
